--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         Imersão Dev - Aula 09
     </title>
      <link href="https://adriellyyamaoto.github.io/supertrunfo/style.css" rel= "stylesheet" />
-    <script src="https://adriellyyamaoto.github.io/supertrunfo/scripts.js"></script>
+    <script src="https://adriellyyamaoto.github.io/supertrunfo/script.js"></script>
 </head>
 
 <body>
