--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>
         Imersão Dev - Aula 09
     </title>
-
+ <link href="https://adriellyyamaoto.github.io/Supertrunfo/style.css" rel= "stylesheet"/>
+    <script src="https://adriellyyamaoto.github.io/Supertrunfo/script.js"></script>
 </head>
 
 <body>
